<resources>
    <string name="app_name">Medical Vanguard</string>
    <string name="nurse">nurse</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="DataQueryResults">Data Query Results</string>
    <string name="ECG">Electrocardiogram</string>
    <string name="CaseQueryResults">Case Query Results</string>
    <string name="RealTimeValue">Real-time Value</string>
    <string name="BloodOxygen">Blood Oxygen Level</string>
    <string name="Pulse">Pulse</string>
    <string name="Zero">0</string>
    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="MeasurementResult">Measurement Result</string>
    <string name="ReturnMainScreen">Main Screen</string>
    <string name="Measure_BloodOxygen_Pulse">Measure Blood Oxygen Level and Pulse</string>
    <string name="Remind_BloodOxygen_Pulse">Place your finger on the Red light of the instrument,\nand then press the start button.\nPlease also make sure that your WI-FI\nis connected to "Measure"</string>
    <string name="StartMeasure">Start Measuring</string>
    <string name="Measure_ECG">Measure Electrocardiogram</string>
    <string name="Remind_ECG">Please put the sticker on the correct position,\nand then press the start button.\nPlease also make sure that your WI-FI\nis connected to "Measure"</string>
    <string name="Disease">Please enter your Disease Description.</string>
    <string name="Upload">Upload</string>
    <string name="SelectData">Select Data</string>
    <string name="DiseaseDescription">Disease Description</string>
    <string name="PleaseSelectHistoryData">Please select the Historical Data you want to find：</string>
    <string name="Search">Search</string>
    <string name="PleaseSelectHistoryCase">Please select the Historical Case you want to find：</string>
    <string name="HorizontalLine">－－－－－－－－－－－－－－－－－－－－－－－－－</string>
    <string name="Name">Name</string>
    <string name="Sex">Sex</string>
    <string name="cell">Cell</string>
    <string name="e_mail">E-mail</string>
    <string name="Birthday_age">Birthday(Age)</string>
    <string name="tel">tel</string>
    <string name="ModifyPersonalInformation">Modify Personal Info</string>
    <string name="ModifyPassword">Modify Password</string>
    <string name="welcome">Welcome</string>
    <string name="填寫心情手札">Keep Measurement Diary</string>
    <string name="textview">TextView</string>
    <string name="gif_jpeg_bmp_png">You can upload GIF, JPEG, BMP, PNG format\nas background image.</string>
    <string name="查看心情手札">Read Measurement Diary</string>
    <string name="心情札記">Measurement Diary</string>
    <string name="刪除">Delete</string>
    <string name="虛線">Dotted Line</string>
    <string name="實線">Solid Line</string>
    <string name="紅色">Red</string>
    <string name="藍色">Blue</string>
    <string name="綠色">Green</string>
    <string name="清除畫板">Clear\nCanvas</string>
    <string name="設置背景">Set up Background</string>
    <string name="儲存至裝置">Save to Device</string>
    <string name="還原">Undo</string>
    <string name="上傳至雲端">Upload to Cloud</string>
    <string name="display">Display</string>
    <string name="ecg">ECG</string>
    <string name="blood_oxygen">Blood Oxygen</string>
    <string name="重作">Redo</string>
    <string name="view_mode">View Mode</string>
    <string name="simple_view_mode">Simple View Mode</string>
</resources>
