<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.BrowseHistory_Detect_Data"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="68dp">

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/PleaseSelectHistoryData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView33" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="323dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/spinner_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <CheckBox
        android:id="@+id/checkBox_pulse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pulse"
        app:layout_constraintBottom_toBottomOf="@+id/checkBox_blood_oxygen"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.79" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DataQueryResults"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/查看心情手札"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_blood_oxygen"
        app:layout_constraintVertical_bias="0.38" />

    <CheckBox
        android:id="@+id/checkBox_ecg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ecg"
        app:layout_constraintBottom_toBottomOf="@+id/checkBox_blood_oxygen"
        app:layout_constraintStart_toStartOf="@+id/linearLayout" />

    <CheckBox
        android:id="@+id/checkBox_blood_oxygen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/blood_oxygen"
        app:layout_constraintEnd_toStartOf="@+id/checkBox_pulse"
        app:layout_constraintStart_toEndOf="@+id/checkBox_ecg"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="323dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/textView16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner2"
        app:layout_constraintVertical_bias="0.35000002">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/linear_pulse"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_pulse_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Pulse"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_pulse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/Zero"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_bloodOxygen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_bloodOxygen_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/BloodOxygen"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_bloodOxygen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/Zero"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView_ecg_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/ECG"
            android:textStyle="bold" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/lineChart"
            android:layout_width="323dp"
            android:layout_height="117dp"
            android:layout_marginTop="16dp" />
    </LinearLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/simple_view_mode"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>